# openforge-prompt-git

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
docs/: zh-CN.md
src/: App.tsx  index.css  store.ts  types.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  crypto.rs  db.rs  error.rs  integration_tests.rs  lib.rs  main.rs  models.rs
src-tauri/src/llm/: adapter.rs  mod.rs  ollama.rs  openai_compat.rs
src-tauri/src/services/: batch.rs  compare.rs  export.rs  mod.rs  model.rs  project.rs  settings.rs  template.rs  version.rs
src/components/: BatchView.tsx  CompareView.tsx  EditorView.tsx  SettingsView.tsx  Sidebar.tsx  ui.tsx
src/lib/: api.ts
