[package]
name = "prompt-git"
version = "0.1.0"
description = "Prompt Git — local Prompt version control and multi-model comparison"
authors = ["Prompt Git Contributors"]
edition = "2021"

[lib]
name = "prompt_git_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
sha1 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
aes-gcm = "0.10"
base64 = "0.22"
dirs = "6"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
regex = "1"
futures = "0.3"
similar = "2"
rand = "0.8"
getrandom = "0.2"
